начало второй страницы

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
             </div>
             <div class="search-controls">
                 <button class="icon-button"><i class="fas fa-search"></i></button>
+                <button class="icon-button button-close"><i class="fas fa-times"></i></button>
             </div>
             <div class="site-title nunito-extrabold">MITALENT</div>
         </header>
@@ -47,6 +48,44 @@
                     </div>
                 </div>
             </div>
+        </section>
+        <section class="second-screen">
+            <!-- <div class="empty block"></div> -->
+            <div class="main-profile flex-container">
+                <div class="slider-left">
+
+                </div>
+
+            <div class="profile-center flex-container">
+                <div class="profile-menu">
+                    <ul>
+                        <li>PROFILE</li>
+                        <li>PRESS</li>
+                        <li>AWARDS</li>
+                        <li>CREADITS</li>
+                    </ul>
+
+                </div>
+                <div class="profile-title">
+                <h1>Profile</h1>
+                <h2>Dereck Anderson is a leading actor,<br>
+                    comediant and writer.
+                </h2>
+                </div>
+                <div class="profile-text">
+
+                </div>
+
+            </div>
+            <div class="icons-bar">
+
+            </div>
+
+
+
+
+            </div>
+
         </section>
     </body>
 </html>
