--- a/index.html
+++ b/index.html
@@ -53,10 +53,11 @@
             <!-- <div class="empty block"></div> -->
             <div class="main-profile flex-container">
                 <div class="pofile-left">
-
+                        kdfjhdkjhfvkjdvfkjdjkh
                 </div>
             
                 <div class="profile-right flex-container">
+                    <div class="profile-center flex-container">
                         <ul class="profile-menu-list flex-container nunito-extrabold">
                             <li class="profile-menu-item">profile</li>
                             <li class="profile-menu-item">press</li>
@@ -66,17 +67,21 @@
                         <span>------</span>
                         
                         <div class="profile-title">
-                    Profile Dereck Anderson is a leading actor,comediant and writer.
+                        Profile Dereck Anderson is a leading actor,comediant and writer.
+                        </div>
+                        <div class="profile-text">
+                            jhkjfghkdjhfgkjdhkjfghlkdjhlgfkjhdlkjghk
+                            hgjdfkjghhdkjfghkdjhfgkjdkfjglskjdfgl
+                            ssddsauoah;lkdnvlmcnxlkjdsslfhlkjdsnflbkjn
+                            dfigugdihgidhfgighsdfihgifdhiudfhi
+                        </div>
                     </div>
-                    <div class="profile-text">
-
-                    </div>
-                    <div class="icons-bar">
-                        <ul>
-                            <li></li>
-                            <li></li>
-                            <li></li>
-                            <li></li>
+                    <div class="icons-bar flex-container"> 
+                        <ul class="icons-list flex-container">
+                            <li><i class="fab fa-facebook"></i></li>
+                            <li><i class="fab fa-instagram"></i></li>
+                            <li><i class="fab fa-youtube"></i></li>
+                            <li><i class="fab fa-twitter"></i></li>
                         </ul>
                     </div> 
 
