--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
                 <button class="icon-button"><i class="fas fa-bars"></i></button>
                 <a href="#" class="link-font clients-link">CLIENTS</a>
                 <a href="#" class="link-font">NEWS</a>
+                <a href="#" class="link-font">NEWS</a>
             </div>
             <div class="search-controls">
                 <button class="icon-button"><i class="fas fa-search"></i></button>
@@ -65,17 +66,21 @@
                     </div>
                 </div>
                 <div class="profile-right flex-container">
-                    <div class="profile-center flex-container">
+                    <div class="profile-center">
                         <ul class="profile-menu-list flex-container nunito-extrabold">
                             <li class="profile-menu-item">profile</li>
                             <li class="profile-menu-item">press</li>
                             <li class="profile-menu-item">awards</li>
                             <li class="profile-menu-item">creadits</li>
                         </ul>
-                        <h2 class="profile-title">PROFILE</h2>
-                        <div class="profile-description">
-                        Profile Dereck Anderson is a leading actor,<br>comediant and writer.
+                        <h2 class="profile-title nunito-extrabold">PROFILE.</h2>
+                        <div class="profile-description poppins-regular">
+                        Dereck Anderson is a leading actor,<br>comediant and writer.
                         </div>
+                        <div class="star"><i class="far fa-star"></i>
+                            British Award 2020
+                        </div>
+                            
                         <div class="profile-text">
                             Lorem ipsum, dolor sit consectetur adipisicing elit. Reiciendis doloribus
                               veritatis, molestias culpa
