--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                         <div class="profile-description poppins-regular">
                         Dereck Anderson is a leading actor,<br>comediant and writer.
                         </div>
-                        <div class="star"><i class="far fa-star"></i>
+                        <div class="profile-star nunito-semibold"><i class="far fa-star"></i>
                             British Award 2020
                         </div>
                             
